[gd_scene load_steps=4 format=3 uid="uid://ujuhui2i4hg8"]

[ext_resource type="Script" uid="uid://os5vog5pyb6a" path="res://utilities/food_spawn.gd" id="1_sa0e7"]
[ext_resource type="PackedScene" uid="uid://cn8n0j2de43v4" path="res://entities/food/food.tscn" id="2_1vh0c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fb0u7"]

[node name="FoodSpawn" type="Node3D"]
script = ExtResource("1_sa0e7")
foods = Array[PackedScene]([ExtResource("2_1vh0c")])

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_fb0u7")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Food" parent="." instance=ExtResource("2_1vh0c")]

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
